tests/toylang/neg/000743_mutation.toylang
program a = { a = int 0; } .
